# mender-mcu

./: ..pre-commit-config.yaml.kate-swp  .check-headers-ignore  .clang-format  .clang-format-ignore  .docs_header.md  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CMake_posix_defaults.txt  CODEOWNERS  MEN-7526-cmake-refactor.md  README.md  idf_component.yml  release-please-config.json  renovate.json5  west.yml
.github/workflows/: build_tests.sh  check_allocations.sh  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  do_code_format.sh
.gitlab/: release.yaml
add-ons/src/: mender-configure.c  mender-troubleshoot.c
cmake/: CMake_defaults.txt  CMake_posix_defaults.txt  CMake_weak_defaults.txt  asan.cmake  git_helper.cmake  helper.cmake  mender_mcu_sources.txt  threadsan.cmake  undefsan.cmake
core/src/: mender-alloc.c  mender-api.c  mender-artifact-download.c  mender-artifact.c  mender-client.c  mender-deployment-data.c  mender-error-counters.c  mender-inventory.c  mender-update-module.c  mender-utils.c  mender-zephyr-image-update-module.c
docs/: flashwear.md  footprint.md
esp-idf/: CMakeLists.txt  Kconfig
include/: mender-alloc.h  mender-api.h  mender-artifact-download-data.h  mender-artifact-download.h  mender-artifact.h  mender-client.h  mender-deployment-data.h  mender-error-counters.h  mender-flash.h  mender-http.h  mender-inventory.h  mender-log.h  mender-os.h  mender-scheduler.h  mender-storage.h  mender-tls.h  mender-update-module.h  mender-utils.h  mender-zephyr-image-update-module.h
include/mender/: alloc.h  api.h  artifact-download-data.h  artifact-download.h  artifact.h  client.h  deployment-data.h  error-counters.h  flash.h  http-client-event.h  http.h  inventory.h  log.h  os.h  sha.h  storage.h  tls.h  update-module.h  utils.h  zephyr-image-update-module.h
platform/flash/generic/weak/src/: mender-flash.c
platform/flash/posix/src/: mender-flash.c
platform/flash/zephyr/src/: mender-flash.c
platform/log/posix/src/: mender-log.c
platform/log/zephyr/src/: mender-log.c
platform/memory/generic/src/: mender-alloc.c
platform/net/generic/curl/src/: mender-http.c
platform/net/generic/weak/src/: mender-http.c
platform/net/zephyr/include/: mender-net.h
platform/net/zephyr/src/: mender-http.c  mender-net.c  mender-websocket.c
platform/os/generic/weak/src/: mender-os.c
platform/os/zephyr/src/: mender-os.c
platform/scheduler/generic/weak/src/: mender-scheduler.c
platform/scheduler/posix/src/: mender-scheduler.c
platform/scheduler/zephyr/src/: mender-scheduler.c
platform/sha/generic/mbedtls/src/: mender-sha.c
platform/sha/generic/weak/src/: mender-sha.c
platform/storage/esp-idf/nvs/src/: mender-storage.c
platform/storage/generic/weak/src/: mender-storage.c
platform/storage/posix/src/: mender-storage.c
platform/storage/zephyr/nvs/src/: mender-storage.c
platform/tls/generic/mbedtls/src/: mender-tls.c
platform/tls/generic/weak/src/: mender-tls.c
src/core/: alloc.c  api.c  artifact-download.c  artifact.c  client.c  deployment-data.c  error-counters.c  inventory.c  update-module.c  utils.c  zephyr-image-update-module.c
src/include/: alloc.h  api.h  artifact-download-data.h  artifact-download.h  artifact.h  certs.h  client.h  deployment-data.h  error-counters.h  flash.h  http-client-event.h  http.h  inventory.h  log.h  os.h  sha.h  storage.h  tls.h  update-module.h  utils.h  zephyr-image-update-module.h
src/platform/certs/generic/weak/: certs.c
src/platform/certs/posix/: certs.c
src/platform/certs/zephyr/: certs.c
src/platform/flash/generic/weak/: flash.c
src/platform/flash/generic/weak/src/: flash.c
src/platform/flash/posix/: flash.c
src/platform/flash/posix/src/: flash.c
src/platform/flash/zephyr/: flash.c
src/platform/flash/zephyr/src/: flash.c
src/platform/inventory/generic/weak/: inventory.c
src/platform/inventory/zephyr/: inventory.c
src/platform/log/esp-idf/: log.c
src/platform/log/generic/weak/: log.c
src/platform/log/generic/weak/src/: log.c
src/platform/log/posix/: log.c
src/platform/log/posix/src/: log.c
src/platform/log/zephyr/: log.c
src/platform/log/zephyr/src/: log.c
src/platform/memory/generic/src/: alloc.c
src/platform/memory/zephyr/: alloc.c
src/platform/memory/zephyr/src/: alloc.c
src/platform/net/generic/curl/: http.c
src/platform/net/generic/curl/src/: http.c
src/platform/net/generic/weak/: http.c
src/platform/net/generic/weak/src/: http.c
src/platform/net/zephyr/: http.c  net.c  net.h
src/platform/net/zephyr/include/: net.h
src/platform/net/zephyr/src/: http.c  net.c
src/platform/os/esp-idf/: reboot.c
src/platform/os/freertos/: os.c
src/platform/os/generic/weak/: os.c
src/platform/os/generic/weak/src/: os.c
src/platform/os/posix/: os.c
src/platform/os/posix/src/: os.c
src/platform/os/zephyr/: os.c
src/platform/os/zephyr/src/: os.c
src/platform/sha/generic/mbedtls/: sha.c
src/platform/sha/generic/mbedtls/src/: sha.c
src/platform/sha/generic/weak/: sha.c
src/platform/sha/generic/weak/src/: sha.c
src/platform/storage/generic/weak/: storage.c
src/platform/storage/posix/: storage.c
src/platform/storage/posix/src/: storage.c
src/platform/storage/zephyr/nvs/: storage.c
src/platform/tls/generic/mbedtls/: tls.c
src/platform/tls/generic/weak/: tls.c
src/platform/update_modules/zephyr/image/: update-module.c
tests/: CMakeLists.txt
tests/cmake/: FetchCMocka.cmake
tests/mocks/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  main.c
tests/smoke/mocks/: CMakeLists.txt
tests/smoke/src/: main.c
tests/src/: main.c
tests/tests/: CMakeLists.txt  mender_test_client.c
tests/unit/: CMakeLists.txt  main_test.cpp
tests/unit/core/: artifact_test.cpp  client_test.cpp  mender-artifact_test.cpp  mender-utils_test.cpp  utils_test.cpp
tests/unit/core/testdata/: test-bad-header.artifact  test-bad-payload.artifact  test-bad-version.artifact
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+5 files in other folders)
